[package]
name = "api"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.2"

[build-dependencies]
tonic-build = "0.3"
